--- a/app.json
+++ b/app.json
@@ -1,13 +1,20 @@
 {
   "pages": [
     "pages/classic/classic",
-    "pages/popular/index"
+    "pages/popular/index",
+    "components/navi/navi",
+    "components/classic/movie/movie",
+    "components/classic/music/music",
+    "components/classic/essay/essay",
+    "components/epsoide/epsoide"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "林间有风",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "backgroundColor": "red",
+    "enablePullDownRefresh": true
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
