--- a/app.json
+++ b/app.json
@@ -6,7 +6,9 @@
     "components/classic/movie/movie",
     "components/classic/music/music",
     "components/classic/essay/essay",
-    "components/epsoide/epsoide"
+    "components/epsoide/epsoide",
+    "pages/book/book",
+    "pages/my/my"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -15,6 +17,32 @@
     "navigationBarTextStyle": "black",
     "backgroundColor": "#DC143C",
     "enablePullDownRefresh": true
+  },
+  "tabBar": {
+    "borderStyle": "black",
+    "selectedColor": "#000000",
+    "backgroundColor": "#ffffff",
+    "color": "#c7c7c7",
+    "list": [
+      {
+        "pagePath": "pages/classic/classic",
+        "selectedIconPath": "/images/tab/classic@highlight.png",
+        "iconPath": "/images/tab/classic.png",
+        "text": "流行"
+      },
+      {
+        "pagePath": "pages/book/book",
+        "selectedIconPath": "/images/tab/book@highlight.png",
+        "iconPath": "/images/tab/book.png",
+        "text": "书单"
+      },
+      {
+        "pagePath": "pages/my/my",
+        "selectedIconPath": "/images/tab/my@highlight.png",
+        "iconPath": "/images/tab/my.png",
+        "text": "喜欢"
+      }
+    ]
   },
   "style": "v2",
   "sitemapLocation": "sitemap.json"
